--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
         "Mongo DB"
     ],
     "website": "https://github.com/AlbertEinsteinTG",
-    "repository": "https://github.com/MoviesbizzBotz/Auto-Filter-Bot-V2",
+    "repository": "https://github.com/MOVIESCLUBmy/Auto-Filter-Bot-V2/blob/master/Readme.md,
     "success_url": "https://telegram.dog/CrazyBotsz",
     "env": {
         "APP_ID": {
